# shoutout-board-app

./: BACKEND_SCAFFOLD.md  FILES_CREATED.txt  FRONTEND_COMPLETE.txt  README.md  SCAFFOLD_INDEX.md  Shoutboard_Business_GTM_Plan.docx  Shoutboard_Product_Tech_Blueprint.docx  docker-compose.yml  openapi.yaml  package.json  setup.sh
.github/workflows/: trivy.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: server.ts
backend/src/db/: client.ts  seed.ts
backend/src/plugins/: auth.plugin.ts
backend/src/routes/: analytics.routes.ts  api-keys.routes.ts  auth.routes.ts  boards.routes.ts  employees.routes.ts  org.routes.ts  posts.routes.ts  slack.routes.ts  webhooks.routes.ts  zoom.routes.ts
backend/src/services/: email.service.ts  encryption.service.ts  milestone.service.ts  scheduler.service.ts  slack.service.ts  webhook.service.ts  zoom.service.ts
backend/src/types/: fastify.d.ts
backend/src/utils/: api-key.ts  errors.ts  slugify.ts
frontend/: .gitignore  Dockerfile  INTEGRATION_GUIDE.md  README.md  STRUCTURE.md  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useAnalytics.ts  (+2 more)
sdk/js/: package.json
sdk/python/: pyproject.toml
sdk/python/shoutboard/: __init__.py  client.py  exceptions.py  http.py
sdk/python/shoutboard/resources/: analytics.py  boards.py  posts.py  webhooks.py
security/trivy/: config-scan.json  fs-scan.json
(+52 files in other folders)
