[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "shoutboard"
version = "0.1.0"
description = "Official Python SDK for the Shoutboard API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["shoutboard", "recognition", "employee", "sdk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://shoutboard.io"
Documentation = "https://docs.shoutboard.io"
Repository = "https://github.com/shoutboard/shoutboard-python"
